--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,20 @@ sub { bottom: -.25em; }
 .cf { *zoom: 1; }
 
 /*for all*/
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+:root {
+  --clr-grey: #2c3e52;
+  --clr-white: #fff;
+}
+
 body {
   box-sizing: border-box;
   font-family: sans-serif;
@@ -97,58 +111,75 @@ li {
   list-style-type: none;
 }
 
-/*for wrapper*/
-.wrapper {
-  max-width: 1360px;
-  width: 86%; 
-  margin: 0 auto;
+span {
+  display: inline-block;
 }
+
 /*=================================
-  Header styling starts here
+main styling starts here
 =================================*/
 
+.wrapper {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  background-color: var(--clr-grey);
+} 
 
+.loader {
+  width: 200px;
+  height: 200px;
+  position: relative;
+}
 
+.kinetic {
+  width: 0;
+  height: 0;
+  border: 100px solid transparent;
+  position: absolute;
+  top: 0;
+  left: 0;
+  text-indent: -99999px;
+  transition: all .3s;
+}
 
+.kinetic-one {
+  border-top-color: var(--clr-white);
+  animation: kinetic1 2s linear infinite;
+}
 
+@keyframes kinetic1 {
+  0% {
+    transform: rotate(0deg);
+  }
+  25%, 50% {
+    transform: rotate(180deg);
+  }
+  75%, 100% {
+    transform: rotate(360deg);
+  }
+}
 
-/*=================================
-  Header styling ends here
-=================================*/  
+.kinetic-two {
+  border-left-color: var(--clr-white);
+  animation: kinetic2 2s linear infinite;
+}
 
-/*=================================
-  main styling starts here
-=================================*/
-
-
-
-
-
-
-
+@keyframes kinetic2 {
+  0%, 25% {
+    transform: rotate(0deg);
+  }
+  50%, 75% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
 /*=================================
   main styling ends here
 =================================*/
-
-/*=================================
-  footer styling starts here
-=================================*/ 
-
-
-
-
-
-
-
- /*=================================
-  footer styling ends here
-=================================*/ 
-
-/*media query starts*/
-/*media query for 995px starts here*/
-@media only screen and (max-width: 995px) {
-
-
-
-}  
